--- a/scss/home/_hero.scss
+++ b/scss/home/_hero.scss
@@ -1,15 +1,14 @@
 @use "../util/mixin" as b;
 
-.hero {
+.home-hero {
   background-image: url("../../assets/hero-mobile.png");
   background-size: cover;
   width: 100%;
   height: 40.625rem;
   position: relative;
-  z-index: 0;
 
   @include b.breakpoint(md) {
-    background: url("../../assets/hero-tablet.png");
+    background: url("../../assets/hero-tablet.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -22,11 +21,9 @@
 
   &__content {
     display: flex;
-    // justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 2rem;
-    z-index: 1;
     padding-top: 24%;
 
     @include b.breakpoint(md) {
@@ -36,16 +33,6 @@
     @include b.breakpoint-down(lg) {
       text-align: center;
     }
-  }
-
-  &__overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-color: hsla(216, 17%, 35%, 0.8);
   }
 
   &__title-home {
@@ -78,7 +65,6 @@
 
   &__image-mobile {
     position: absolute;
-    z-index: 3;
     left: 0;
     bottom: 1.75rem;
     width: 8rem;
@@ -104,25 +90,6 @@
       position: absolute;
       left: 0;
       bottom: 18rem;
-    }
-  }
-
-  &__circle-home {
-    @include b.breakpoint-down(md) {
-      display: none;
-    }
-
-    @include b.breakpoint(md) {
-      display: block;
-      width: 14.625rem;
-      position: absolute;
-      right: -1.875rem;
-      bottom: 3.4rem;
-    }
-
-    @include b.breakpoint(lg) {
-      right: 4rem;
-      bottom: 3rem;
     }
   }
 }
