--- a/scss/util/_footer.scss
+++ b/scss/util/_footer.scss
@@ -5,6 +5,7 @@
   background-color: var(--color-footer);
   padding-top: 2rem;
   padding-bottom: 2rem;
+  overflow-x: hidden;
 
   @include b.breakpoint(md) {
     display: flex;
@@ -12,17 +13,21 @@
     align-items: center;
   }
 
-&__item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+  &__item {
+    @include b.breakpoint(md) {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
 
-&__nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+  &__nav {
+    @include b.breakpoint(md) {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
 
   &__logo {
     width: 4.6875rem;
@@ -51,10 +56,10 @@
     }
 
     @include b.breakpoint(md) {
-        display: flex;
-        gap: 1.6rem;
-        align-items: center;
-        margin-left: 6rem;
+      display: flex;
+      gap: 1.6rem;
+      align-items: center;
+      margin-left: 6rem;
     }
   }
 
@@ -65,13 +70,13 @@
     gap: 1.4rem;
     margin-top: 4.4rem;
 
-    &>* {
-        width: 1.5rem;
-        height: auto;
+    & > * {
+      width: 1.5rem;
+      height: auto;
     }
 
     @include b.breakpoint(md) {
-        margin-top: 0;
+      margin-top: 0;
     }
   }
 }
