--- a/scss/util/_mobile-nav.scss
+++ b/scss/util/_mobile-nav.scss
@@ -2,16 +2,18 @@
 
 .mobile__menu {
   height: 100dvh;
-  width: 16rem;
+  width: 15rem;
   background-color: var(--color-dark);
+  padding-bottom: 8rem;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 11111;
   display: none;
+  overflow: hidden;
 
   &-nav {
-    height: 100%;
+    height: 60%;
     padding-left: 2rem;
     display: flex;
     justify-content: space-around;
@@ -21,7 +23,6 @@
     &-item {
       display: flex;
       justify-content: center;
-      // align-items: baseline;
       flex-direction: column;
       gap: 2rem;
 
@@ -35,18 +36,20 @@
 
   &-cross {
     background-color: var(--color-white);
-    width: 100%;
     height: 4.375rem;
+    width: 100%;
 
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding-left: 2rem;
+    padding-left: 2.8rem;
 
     & svg {
       width: 1.4rem;
       cursor: pointer;
-      // display: none;
     }
   }
 }
+
+
+
